# Rustify

./: .gitignore  ADVANCED_ANTI_DETECTION_SYSTEM.md  AUDIO_QUALITY_GUIDE.md  CLEAR_COMPLETED_TASKS_FEATURE.md  Cargo.toml  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  build.ps1  build.sh  create_ico_file.py  package.json  package.json.bak  test-api.html  test-build.ps1  test-frontend.html
cli/: Cargo.toml
cli/src/: args.rs  config.rs  main.rs  ui.rs
core/: Cargo.toml
core/src/: batch.rs  batch_simple.rs  config.rs  converter.rs  converter_simple.rs  extractor.rs  extractor_simple.rs  lib.rs  quality.rs  runtime.rs  spotify.rs  utils.rs
desktop/: Cargo.toml  build.rs  tauri.conf.json
desktop/src/: commands.rs  main.rs
scripts/: generate_icons.py  setup-linux.sh  setup-windows.ps1
shared/: Cargo.toml
shared/src/: types.rs
web-backend/: .dockerignore  Cargo.toml  Dockerfile  README-DEPLOYMENT.md  README.md  YOUTUBE_GUIDE.md  render.yaml  setup.ps1  setup.sh
web-backend/src/: anti_detection.py  handlers.rs  main.rs  selenium_extractor.py  selenium_youtube.rs  state.rs  temp_mail.rs  websocket.rs  youtube.rs  youtube_accounts.rs  youtube_old.rs  youtube_simple.rs
web-backend/src/security/: csrf.rs  headers.rs  input_validation.rs  mod.rs  rate_limiting.rs  security_headers.rs  validation.rs
