[workspace]
members = [
    "core",
    "desktop",
    "web-backend"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
thiserror = "1.0.64"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
regex = "1.10.6"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
