[workspace]
members = [
    "cli",
    "core",
    "desktop",
    "web-backend"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.52.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
regex = "1.12.3"
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
