[package]
name = "ezp3-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for EzP3 YouTube converter"
license = "MIT"

[[bin]]
name = "ezp3"
path = "src/main.rs"

[dependencies]
ezp3-core = { path = "../core" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.17"
console = "0.15"
dialoguer = "0.10"
dirs = "5.0"
colored = "2.0"
chrono = { workspace = true }
