[package]
name = "rustify-cli"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for Rustify"
license = "MIT"

[[bin]]
name = "rustify"
path = "src/main.rs"

[dependencies]
rustify-core = { path = "../core" }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
indicatif = "0.17.11"
console = "0.15.11"
dirs = "5.0.1"
colored = "2.2.0"
chrono = { workspace = true }
