[package]
name = "rustify-core"
version = "0.1.0"
edition = "2021"
description = "Core library for high-performance YouTube video conversion"
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

base64 = "0.22.1"
dirs = "5.0.1"
num_cpus = "1.17.0"
reqwest = { version = "0.13.2", default-features = false, features = ["charset", "http2", "json", "query", "rustls"] }
