[package]
name = "web-backend"
version = "0.1.0"
edition = "2021"
description = "Web API backend for Rustify YouTube converter"

[[bin]]
name = "web-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# WebSocket support
futures = "0.3"

# Security dependencies (simplified)
regex = "1.10"
once_cell = "1.19"
