[package]
name = "web-backend"
version = "0.1.0"
edition = "2021"
description = "Web API backend for Rustify YouTube converter"

[[bin]]
name = "web-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
anyhow = "1.0.89"
tracing = "0.1.40"
tracing-subscriber = "0.3.17"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }

# Web framework
axum = { version = "0.8.4", features = ["ws", "multipart"] }
tower = "0.5.0"
tower-http = { version = "0.6.1", features = ["cors", "fs", "trace"] }

# WebSocket support
futures = "0.3.30"

# Security dependencies (simplified)
regex = "1.10.6"
once_cell = "1.19.0"

# Process execution and file handling
tempfile = "3.12.0"
url = "2.5.2"
tokio-util = { version = "0.7.12", features = ["io"] }

# Browser automation for YouTube bypass
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
which = "6.0"
