[package]
name = "web-backend"
version = "0.1.0"
edition = "2021"
description = "Web API backend for Rustify YouTube converter"

[[bin]]
name = "web-backend"
path = "src/main.rs"

[dependencies]
rustify-core = { path = "../core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Web framework
axum = { version = "0.8.4", features = ["ws", "multipart"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }

# WebSocket support
futures = "0.3.31"
regex = { workspace = true }
once_cell = "1.21.3"
tokio-util = { version = "0.7.16", features = ["io"] }
